--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "rsuite": "^4.9.3",
+    "rsuite-table": "^3.14.5",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
