--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "concurrently": "^6.0.2",
+    "express": "^4.17.1",
     "json-server": "^0.16.3",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
@@ -46,6 +49,7 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "proxy": "http://localhost:3000"
   }
 }
