--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "dog-info",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "node server.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
@@ -30,12 +36,6 @@
     "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -53,6 +53,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "proxy": "http://localhost:3001"
+    "proxy": "http://localhost:8080"
   }
 }
